fix: more colors to ColorButton, global fancy scrollbars

--- a/src/components/DColorButton/DColorButton.scss
+++ b/src/components/DColorButton/DColorButton.scss
@@ -44,4 +44,16 @@
       color: $text-muted;
     }
   }
+
+  &[color="3"] {
+    background-color: transparent;
+    color: white;
+    &:hover {
+      text-decoration: underline;
+    }
+    &:disabled {
+      background-color: transparent;
+      color: $text-muted;
+    }
+  }
 }
