--- a/src/components/InputPanel/InputPanel.scss
+++ b/src/components/InputPanel/InputPanel.scss
@@ -16,22 +16,5 @@
       padding-top: 5px;
       padding-bottom: 5px;
     }
-    QScrollBar {
-      height: 8px;
-      width: 8px;
-      background-color: transparent;
-      border: 2px solid $channeltextarea-background;
-      border-radius: 4px;
-      &::handle {
-        background-color: $scrollbar-thin-thumb;
-        border-radius: 4px;
-      }
-      &::add-line {
-        height: 0px;
-      }
-      &::sub-line {
-        height: 0px;
-      }
-    }
   }
 }
